Finalized Allure Reporting and Framework core utilities